Fixed network dark mode text, styling and add network regex

--- a/src/modules/blockchainApplication/manage/components/UserApplicationSelector/UserApplicationSelector.css
+++ b/src/modules/blockchainApplication/manage/components/UserApplicationSelector/UserApplicationSelector.css
@@ -8,6 +8,7 @@
     font-size: var(--font-size-h6);
     font-family: var(--heading-font);
     font-weight: var(--font-weight-bold);
+    color: var(--color-zodiac-blue);
     margin-bottom: 16px;
   }
 
